fix chat scroll overflow by overflow-anchor

--- a/src/components/Chat/Scroller/scroller.module.css
+++ b/src/components/Chat/Scroller/scroller.module.css
@@ -18,5 +18,5 @@
   display: flex;
   justify-content: flex-end;
   flex-direction: column;
-  min-height: 100%;
+  min-height: calc(100% - 1px);
 }
